added default order for view_week_tree

--- a/views/weeks.xml
+++ b/views/weeks.xml
@@ -6,7 +6,7 @@
             <field name="model">week.model</field>
             <field name="priority" eval="8"/>
             <field name="arch" type="xml">
-                <tree string="weeks">
+                <tree string="weeks" default_order="week_num">
                     <field name="week_num"/>
                 </tree>
             </field>
