--- a/views/weeks.xml
+++ b/views/weeks.xml
@@ -7,6 +7,7 @@
             <field name="priority" eval="8"/>
             <field name="arch" type="xml">
                 <tree string="weeks" default_order="week_num">
+                    <field name="year"/>
                     <field name="week_num"/>
                 </tree>
             </field>
