Pushing tree view for weekly resource

--- a/views/resource_tree.xml
+++ b/views/resource_tree.xml
@@ -5,7 +5,7 @@
             <field name="model">resource.model</field>
             <field name="priority" eval="8"/>
             <field name="arch" type="xml">
-                <tree string="Resrouce">
+                <tree string="Resource">
                     <field name="project"/>
                     <field name="employee"/>
                     <field name="workload"/>
@@ -19,11 +19,11 @@
             <field name="model">resource.model</field>
             <field name="priority" eval="8"/>
             <field name="arch" type="xml">
-                <form string="Resrouce">
+                <form string="Resource">
                     <sheet>
                         <notebook colspan="4">
-                            <page name="add_resource" string="Ressource">
-                                <group col="4" colspan="4" name="resrouce_detail">
+                            <page name="add_resource" string="Resource">
+                                <group col="4" colspan="4" name="resource_detail">
                                     <field name="project" widget="selection"/>
                                     <field name="employee" widget="selection"/>
                                     <field name="workload"/>
