--- a/views/weekly_resource.xml
+++ b/views/weekly_resource.xml
@@ -36,7 +36,7 @@
             <field name="domain">[]</field>
         </record>
 
-         <menuitem id="menu_weekly" name="Weekly Resources" parent="menu_resource"
+         <menuitem id="menu_weekly" name="Overview" parent="menu_resource"
                   action="action_view_weekly"/>
 
     </data>
