--- a/views/weekly_resource.xml
+++ b/views/weekly_resource.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <data>
-        <record id="view_weekly_tree" model="ir.ui.view">
-            <field name="name">weekly_resource.tree</field>
-            <field name="model">weekly_resource.model</field>
-            <field name="priority" eval="8"/>
-            <field name="arch" type="xml">
-                <tree string="Resource">
-                    <field name="week"/>
-                    <field name="resource_id"/>
-                    <field name="employee"/>
-                    <field name="project"/>
-                    <field name="workload"/>
-                </tree>
-            </field>
-        </record>
+<!--        <record id="view_weekly_tree" model="ir.ui.view">-->
+<!--            <field name="name">weekly_resource.tree</field>-->
+<!--            <field name="model">weekly_resource.model</field>-->
+<!--            <field name="priority" eval="8"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <tree string="Resource">-->
+<!--                    <field name="week"/>-->
+<!--                    <field name="resource_id"/>-->
+<!--                    <field name="employee"/>-->
+<!--                    <field name="project"/>-->
+<!--                    <field name="workload"/>-->
+<!--                </tree>-->
+<!--            </field>-->
+<!--        </record>-->
         <record id="view_weekly_pivot" model="ir.ui.view">
             <field name="name">weekly_resource.pivot</field>
             <field name="model">weekly_resource.model</field>
             <field name="arch" type="xml">
                 <pivot string="Resource Pivot">
-                    <field name="week" type="col"/>
+                    <field name="week_num" type="col"/>
                     <field name="workload" type="measure"/>
                     <field name="employee" type="row"/>
                     <field name="project" type="row"/>
