--- a/views/resource_tree.xml
+++ b/views/resource_tree.xml
@@ -1,4 +1,3 @@
-
 <!-- View for the Resource model-->
 <odoo>
     <data>
@@ -34,7 +33,7 @@
                                 </group>
                                 <group colspan="2" col="2">
                                     <separator string="Dates" colspan="2"/>
-
+                                    <field name="next_week"/>
                                     <field name="start_date"/>
                                     <field name="end_date"/>
                                 </group>
@@ -50,10 +49,10 @@
             <field name="res_model">resource.model</field>
             <field name="view_mode">tree,form</field>
             <field name="domain">[]</field>
-<!--            <field name="help" type="html">-->
-<!--                <p class="oe_view_nocontent_create">Create/Edit</p>-->
-<!--            </field>-->
-<!--            <field name="view_id" ref="view_resource_tree"/>-->
+            <!--            <field name="help" type="html">-->
+            <!--                <p class="oe_view_nocontent_create">Create/Edit</p>-->
+            <!--            </field>-->
+            <!--            <field name="view_id" ref="view_resource_tree"/>-->
         </record>
 
         <menuitem id="menu_resource" name="Resource Planning"/>
