--- a/views/resource_tree.xml
+++ b/views/resource_tree.xml
@@ -41,8 +41,8 @@
                             <page name="update" string="Update only">
                                 <group colspan="2" col="2">
                                     <separator string="Update only" colspan="2"/>
-<!--                                    <field name="add_next_week"/>-->
-                                    <button name="add_next_week" string="Add next week to current resource" class="oe_highlight" type="object"/>
+                                  <button name="plus_one_week" string="Extend resource by one week"
+                                            class="oe_highlight" type="object"/>
                                 </group>
                             </page>
                         </notebook>
