Adding workload to WeeklyResource. Step 2: Add field weekly_workload in weekly_resource.py and modify its creation in resource.py

--- a/views/weekly_resource.xml
+++ b/views/weekly_resource.xml
@@ -24,7 +24,7 @@
             <field name="arch" type="xml">
                 <pivot string="Resource Pivot">
                     <field name="week_string" type="col"/>
-                    <field name="base_workload" type="measure"/>
+                    <field name="weekly_workload" type="measure"/>
                     <field name="employee" type="row"/>
                     <field name="project" type="row"/>
                 </pivot>
