added 2 months filter

--- a/views/weekly_resource.xml
+++ b/views/weekly_resource.xml
@@ -18,6 +18,23 @@
 <!--                </tree>-->
 <!--            </field>-->
 <!--        </record>-->
+         <record id="view_weekly_search" model="ir.ui.view">
+            <field name="name">weekly_resource.search</field>
+            <field name="model">weekly_resource.model</field>
+            <field name="priority" eval="8"/>
+            <field name="arch" type="xml">
+                <search string="Resource">
+                    <field name="project"/>
+                    <field name="employee"/>
+                    <field name="workload"/>
+                    <field name="start_date"/>
+                    <field name="end_date"/>
+                    <filter name='week_name' string="2 Months" domain="[('week_bool', '=', True)]"/>
+                </search>
+            </field>
+        </record>
+
+
         <record id="view_weekly_pivot" model="ir.ui.view">
             <field name="name">weekly_resource.pivot</field>
             <field name="model">weekly_resource.model</field>
