--- a/views/weekly_resource.xml
+++ b/views/weekly_resource.xml
@@ -30,6 +30,8 @@
                     <field name="start_date"/>
                     <field name="end_date"/>
                     <filter name='week_name' string="2 Months" domain="[('week_bool', '=', True)]"/>
+                     <filter name='upcomming_resources' string="Future Resources" domain="[('end_date', '&gt;=', context_today().strftime('%Y-%m-%d'))]"/>
+                    <filter name='upcomming_resources with start date before 60d from now' string="Resources ending in coming 2 months" domain="[('end_date', '&gt;=', context_today().strftime('%Y-%m-%d')), ('start_date','&lt;=', ((context_today()+datetime.timedelta(days=60)).strftime('%Y-%m-%d')))]"/>
                 </search>
             </field>
         </record>
