--- a/views/weekly_resource.xml
+++ b/views/weekly_resource.xml
@@ -5,6 +5,19 @@
 <odoo>
     <data>
 
+        <record id="view_weekly_tree" model="ir.ui.view">
+            <field name="name">weekly_resource.tree</field>
+            <field name="model">weekly_resource.model</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="week_string"/>
+                    <field name="employee"/>
+                    <field name="project"/>
+                    <field name="weekly_workload"/>
+                </tree>
+            </field>
+        </record>
+
         <record id="view_weekly_search" model="ir.ui.view">
             <field name="name">weekly_resource.search</field>
             <field name="model">weekly_resource.model</field>
