exchanged 0 with "" now the row is correct but not really where it should be yet

--- a/reports/overview_employee.xml
+++ b/reports/overview_employee.xml
@@ -24,7 +24,7 @@
                             </div>
                         </t>
                     </tr>
-                    <t t-set="counter" t-value="0"/>
+                    <t t-set="counter" t-value=""/>
                     <t t-foreach="docs" t-as="doc">
 
                     <tr>
