--- a/reports/overview_employee.xml
+++ b/reports/overview_employee.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-   <template id="report_overview">
+    <template id="report_overview">
         <t t-call="web.html_container">
             <div class="page">
                 <table style="border: 2px solid black; text-align:center">
@@ -36,11 +36,16 @@
                                     <span t-field="doc.project"/>
                                 </td>
                                 <t t-set="resource_id" t-value="doc.resource_id"/>
+                                <t t-set="employee" t-value="doc.employee"/>
                                 <t t-set="counter2" t-value="counter2+1"/>
                                 <t t-set="empty" t-value=""/>
                                 <tr>
-                                    <td> <t t-esc="empty"/></td>
-                                     <td>  <t t-esc="empty"/></td>
+                                    <td>
+                                        <t t-esc="empty"/>
+                                    </td>
+                                    <td>
+                                        <t t-esc="empty"/>
+                                    </td>
                                     <t t-foreach="docs" t-as="doc">
 
                                         <div t-if="doc.week_num>=(doc.today+ counter)">
@@ -57,41 +62,46 @@
                                                 <t t-esc="empty"/>
                                             </td>
                                         </div>
-
                                     </t>
                                 </tr>
                             </div>
-                            <div t-if="resource_id!=doc.resource_id">
-                                <td>
-                                    <span t-field="doc.employee"/>
-                                </td>
-                                <td>
-                                    <span t-field="doc.project"/>
-                                </td>
-                                <t t-set="resource_id" t-value="doc.resource_id"/>
-                                <t t-set="counter2" t-value="counter2+1"/>
-                                <tr>
-                                    <t t-foreach="docs" t-as="doc">
 
-                                        <div t-if="doc.week_num>=(doc.today+ counter)">
+                            <div t-if="counter2!=1">
+                                <div t-if="resource_id!=doc.resource_id">
+                                    <div t-if="employee!=doc.employee">
+                                        <td>
+                                            <span t-field="doc.employee"/>
+                                        </td>
+                                        <td>
+                                            <span t-field="doc.project"/>
+                                        </td>
 
-                                            <t t-set="counter" t-value="counter+1"/>
-                                            <td>
-                                                <span t-field="doc.weekly_workload"/>
-                                            </td>
-                                        </div>
+                                        <t t-set="resource_id" t-value="doc.resource_id"/>
+                                        <t t-set="counter2" t-value="counter2+1"/>
+                                        <t t-set="employee" t-value="doc.employee"/>
+                                        <tr>
+                                            <t t-foreach="docs" t-as="doc">
 
-                                        <div t-else="">
-                                            <t t-set="empty" t-value=""/>
-                                            <td>
-                                                <t t-esc="empty"/>
-                                            </td>
-                                        </div>
+                                                <div t-if="doc.week_num>=(doc.today+ counter)">
 
+                                                    <t t-set="counter" t-value="counter+1"/>
+                                                    <td>
+                                                        <span t-field="doc.weekly_workload"/>
+                                                    </td>
+                                                </div>
 
-                                    </t>
-                                </tr>
+                                                <div t-else="">
+                                                    <t t-set="empty" t-value=""/>
+                                                    <td>
+                                                        <t t-esc="empty"/>
+                                                    </td>
+                                                </div>
+                                            </t>
+                                        </tr>
+                                    </div>
+                                </div>
                             </div>
+                            <t t-set="counter2" t-value="counter2+1"/>
                         </tr>
                     </t>
 
