--- a/views/weekly_resource.xml
+++ b/views/weekly_resource.xml
@@ -49,6 +49,18 @@
             </field>
         </record>
 
+        <record id="view_weekly_graph" model="ir.ui.view">
+            <field name="name">weekly_resource.graph</field>
+            <field name="model">weekly_resource.model</field>
+            <field name="arch" type="xml">
+                <graph string="Resource Graph" type="bar" stacked="False">
+                    <field name="week_string" type="row"/>
+                    <field name="employee" type="row"/>
+                    <field name="weekly_workload" type="measure"/>
+                </graph>
+            </field>
+        </record>
+
         <record id="view_weekly_form" model="ir.ui.view">
             <field name="name">weekly_resource.form</field>
             <field name="model">weekly_resource.model</field>
@@ -71,7 +83,7 @@
         <record model="ir.actions.act_window" id="action_view_weekly">
             <field name="name">Employee centred</field>
             <field name="res_model">weekly_resource.model</field>
-            <field name="view_mode">pivot,tree</field>
+            <field name="view_mode">pivot,graph,tree</field>
             <field name="domain">[]</field>
         </record>
 
